update webhook setup (#3)
* update webhook setup

* update webhook setup

* update webhook setup
